# chainerror

./: .gitignore  .travis.yml  404.html  Cargo.toml  LICENSE-MIT  README.md  README.tpl  book.js  book.toml  end.html  index.html  print.html  searchindex.js  searchindex.json  tutorial1.html  tutorial10.html  tutorial11.html  tutorial12.html  tutorial13.html  tutorial14.html  tutorial2.html  tutorial3.html  tutorial4.html  tutorial5.html  tutorial6.html  tutorial7.html  tutorial8.html  tutorial9.html
.github/workflows/: coverage.yml  gh-pages.yml  rust.yml
booksrc/: SUMMARY.md  end.md  tutorial1.md  tutorial10.md  tutorial11.md  tutorial12.md  tutorial13.md  tutorial14.md  tutorial2.md  tutorial3.md  tutorial4.md  tutorial5.md  tutorial6.md  tutorial7.md  tutorial8.md  tutorial9.md
examples/: configapp.rs  example.rs  tutorial1.rs  tutorial10.rs  tutorial11.rs  tutorial12.rs  tutorial13.rs  tutorial14.rs  tutorial15.rs  tutorial2.rs  tutorial3.rs  tutorial4.rs  tutorial5.rs  tutorial6.rs  tutorial7.rs  tutorial8.rs  tutorial9.rs
src/: lib.rs
tests/: test_basic.rs  test_iter.rs
