[package]
name = "chainerror"
version = "0.5.0"
authors = ["Harald Hoyer <harald@redhat.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/chainerror"
homepage = "https://haraldh.github.io/chainerror/"
repository = "https://github.com/haraldh/chainerror"
description = "Make chaining errors easy."
keywords = ["error"]
categories = ["rust-patterns"]
readme = "README.md"

exclude = [ ".gitignore", "examples/*", "booksrc/*", "book.toml",
            "theme/*", "git-deploy-branch.sh", ".travis.yml" ]

[badges]
travis-ci = { repository = "haraldh/chainerror" }

[features]
default = [ ]
no-fileline = []
display-cause = []
no-debug-cause = []
