[package]
name = "chainerror"
version = "0.6.1"
authors = ["Harald Hoyer <harald@redhat.com>"]
edition = "2018"
license = "MIT/Apache-2.0"
documentation = "https://docs.rs/chainerror"
homepage = "https://haraldh.github.io/chainerror/"
repository = "https://github.com/haraldh/chainerror"
description = "Make chaining errors easy."
keywords = ["error"]
categories = ["rust-patterns"]
readme = "README.md"

exclude = [ ".gitignore", "examples/*", "booksrc/*", "book.toml",
            "theme/*", "git-deploy-branch.sh", ".travis.yml" ]

[badges]
# See https://doc.rust-lang.org/cargo/reference/manifest.html#the-badges-section
github = { repository = "haraldh/chainerror", workflow = "Rust" }
maintenance = { status = "actively-developed" }
is-it-maintained-issue-resolution = { repository = "haraldh/chainerror" }
is-it-maintained-open-issues = { repository = "haraldh/chainerror" }

[features]
default = []
display-cause = []
